# DevOrbit

./: .env  .gitignore  CONTRIBUTORS.md  DevOrbit_Community:_Open_Source_Platform_for_Developers.md  Dockerfile  Documentação Oficial - DevOrbit 18acd104bbf380f79642d0b1c5c4dc84.md  FeedDatabase.db  LICENSE  Makefile.txt  README.md  banco_posts_comunidade.db  package-lock.json  package.json  pre-commit-config.yaml  pyproject.toml  requirementes.txt  requirements.txt  run.py  tailwind.config.js  teste.py  teste_requestr_and_try.py  texto.txt  usuarios.db
.github/workflows/: python-package.yml
api/src/: main.py
aplication/src/: __main__.py
aplication/src/routes/: home.py
aplication/src/static/css/: output.css
aplication/src/templates/: home.html
application/log/: logs.txt
application/src/: __main__.py
application/src/api/: api_comfiguracao.py  upload_file.py
application/src/database/: configure_post.py
application/src/models/: link_validators.py  modelsUser.py  recommendations.py  search.py
application/src/routes/: configuracao.py  denucia.py  get_search.py  home.py  login.py  loginAccount.py  logoutAccont.py  page_erro.py  page_post.py  perfil.py  profile_.py  register.py  username.py
application/src/services/: api_nooticias.py  api_noticias.py  api_service.py  perfil.py  user_service.py
application/src/static/: input.css
application/src/templates/: cadastro.html  configuracao.html  create_username.html  denucia.html  home.html  login.html  post.html  profile.html  register.html  termos.html  teste.html
application/src/utils/: terminal.py
(+14 files in other folders)
